// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<td
  className="source-meta source-line-number"
  data-line-number={20}
>
  <Toggler
    closeOnClickOutside={true}
    onRequestClose={[Function]}
    open={false}
    overlay={
      <Memo(LineOptionsPopup)
        firstLineNumber={10}
        line={
          Object {
            "line": 20,
          }
        }
      />
    }
  >
    <span
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="source_viewer.line_X.20"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      20
    </span>
  </Toggler>
</td>
`;

exports[`should render correctly: first line 1`] = `
<td
  className="source-meta source-line-number"
  data-line-number={12}
>
  <Toggler
    closeOnClickOutside={true}
    onRequestClose={[Function]}
    open={false}
    overlay={
      <Memo(LineOptionsPopup)
        firstLineNumber={10}
        line={
          Object {
            "line": 12,
          }
        }
      />
    }
  >
    <span
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="source_viewer.line_X.12"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      12
    </span>
  </Toggler>
</td>
`;

exports[`should render correctly: no line number 1`] = `
<td
  className="source-meta source-line-number"
/>
`;

exports[`should render correctly: no options 1`] = `
<td
  className="source-meta source-line-number"
  data-line-number={12}
>
  12
</td>
`;
